--- a/package.json
+++ b/package.json
@@ -27,19 +27,20 @@
     "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.6.1",
     "bower-webpack-plugin": "^0.1.9",
-    "copyfiles": "^0.2.1",
+    "copyfiles": "^1.0.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
+    "eslint": "^3.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
@@ -50,6 +51,8 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "file-saver": "^1.3.2",
+    "ics-js": "^0.10.1",
     "isomorphic-fetch": "^2.2.1",
     "keycode": "latest",
     "material-ui": "^0.15.0",
@@ -61,12 +64,13 @@
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-addons-transition-group": "^15.0.2",
     "react-addons-update": "^15.0.2",
-    "react-big-calendar": "^0.9.12",
+    "react-big-calendar": "^0.10.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.3.0",
     "react-sticky": "^5.0.3",
     "react-tap-event-plugin": "^1.0.0",
-    "warning": "latest"
+    "warning": "latest",
+    "zpad": "^0.5.0"
   }
 }
