--- a/package.json
+++ b/package.json
@@ -23,52 +23,52 @@
     "url": "https://github.com/takanabe/react-redux-material_ui-boilerplate.git"
   },
   "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.3",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "babel-runtime": "^6.6.1",
+    "babel-register": "^6.11.6",
+    "babel-runtime": "^6.11.6",
     "bower-webpack-plugin": "^0.1.9",
     "copyfiles": "^1.0.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.0.1",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint": "^3.1.1",
+    "eslint-loader": "^1.4.1",
+    "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
-    "less": "^2.6.1",
+    "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "open": "0.0.5",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
     "file-saver": "^1.3.2",
     "ics-js": "^0.10.1",
     "isomorphic-fetch": "^2.2.1",
     "keycode": "latest",
-    "material-ui": "^0.15.0",
-    "mobx": "^2.2.0",
-    "mobx-react": "^3.3.0",
-    "moment": "^2.13.0",
-    "react": "^15.0.2",
-    "react-addons-create-fragment": "^15.0.2",
-    "react-addons-pure-render-mixin": "^15.0.2",
-    "react-addons-transition-group": "^15.0.2",
-    "react-addons-update": "^15.0.2",
-    "react-big-calendar": "^0.10.2",
-    "react-dom": "^15.0.2",
+    "material-ui": "0.15.1",
+    "mobx": "^2.4.0",
+    "mobx-react": "^3.5.1",
+    "moment": "^2.14.1",
+    "react": "^15.2.1",
+    "react-addons-create-fragment": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.2.1",
+    "react-addons-transition-group": "^15.2.1",
+    "react-addons-update": "^15.2.1",
+    "react-big-calendar": "^0.10.3",
+    "react-dom": "^15.2.1",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.3.0",
-    "react-sticky": "^5.0.3",
+    "react-router": "^2.6.0",
+    "react-sticky": "^5.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "warning": "latest",
     "zpad": "^0.5.0"
